# acid-store

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  codecov.yml  default.nix  inputs.nix  shell.nix
.github/workflows/: coverage.yaml  coverage.yml  rust.yml  test.yaml  test.yml
benches/: io.rs
fuse-test/: Dockerfile  fstest.patch  fstest.sh  fsx.sh
fuse-test/fuse-mount/: Cargo.toml
fuse-test/fuse-mount/src/: main.rs
migrations/2019-11-26-194750_create_tables/: down.sql  up.sql
src/: archive.rs  archive_entry.rs  block.rs  database.rs  entry.rs  env.rs  error.rs  header.rs  header_entry.rs  id.rs  io.rs  lib.rs  models.rs  object.rs  schema.rs  serialization.rs
src/file/: archive.rs  entry.rs  mod.rs  platform.rs  repository.rs  serialization.rs
src/object/: archive.rs  block.rs  chunk.rs  chunking.rs  compression.rs  config.rs  encoding.rs  encryption.rs  hashing.rs  header.rs  metadata.rs  mod.rs  object.rs  repository.rs
src/repo/: id_table.rs  key_id.rs  mod.rs  open_repo.rs  state_helpers.rs  state_repo.rs  version_id.rs
src/repo/common/: block_store.rs  chunk_store.rs  chunking.rs  commit.rs  compression.rs  config.rs  convert.rs  encryption.rs  handle.rs  id_table.rs  key.rs  lock.rs  metadata.rs  mod.rs  object.rs  object_io.rs  object_store.rs  open_options.rs  open_repo.rs  packing.rs  report.rs  repository.rs  savepoint.rs  state.rs  state_repo.rs  version_id.rs
src/repo/content/: hash.rs  iter.rs  mod.rs  repository.rs  restore.rs  state.rs
src/repo/file/: entry.rs  file.rs  fuse.rs  holes.rs  iter.rs  metadata.rs  mod.rs  path_tree.rs  platform.rs  repository.rs  serialization.rs  special.rs  state.rs
src/repo/file/fuse/: acl.rs  fs.rs  handle.rs  id_table.rs  inode.rs  metadata.rs  mod.rs  object.rs  options.rs
src/repo/id/: mod.rs  repository.rs  state.rs  table.rs
src/repo/key/: mod.rs  repository.rs
src/repo/object/: chunk_store.rs  chunking.rs  compression.rs  config.rs  encryption.rs  header.rs  lock.rs  metadata.rs  mod.rs  object.rs  open_repo.rs  repository.rs  state.rs
src/repo/state/: info.rs  iter.rs  mod.rs  repository.rs  table.rs  traits.rs
src/repo/value/: iter.rs  key.rs  mod.rs  repository.rs  state.rs
src/repo/version/: info.rs  iter.rs  mod.rs  object.rs  repository.rs  state.rs  version.rs
src/storage/: archive.rs  block.rs  config.rs  encoding.rs  header.rs  mod.rs  object.rs
src/store/: common.rs  data_store.rs  directory.rs  directory_store.rs  error.rs  memory.rs  memory_store.rs  mod.rs  multi.rs  open_store.rs  rclone.rs  rclone_store.rs  redis.rs  redis_store.rs  s3.rs  s3_store.rs  sftp.rs  sftp_store.rs  sqlite.rs  sqlite_store.rs  store.rs
src/store/directory/: mod.rs  store.rs
src/store/file/: block.rs  config.rs  mod.rs  store.rs
src/value/: key.rs  mod.rs  repository.rs
src/version/: object.rs  repository.rs  version.rs
tests/: content_repository.rs  data_store.rs  file_repository.rs  key_repository.rs  multi_store.rs  object.rs  object_repository.rs  open.rs  open_options.rs  state_repo.rs  storage.rs  switch_instance.rs  value_repository.rs  version_repository.rs
tests/common/: assertions.rs  config.rs  data.rs  mod.rs  repository.rs  store.rs
