[package]
name = "acid-store"
version = "0.1.1"
authors = ["Wren Powell <wrentpowell@gmail.com>"]
edition = "2018"
description = "A library for secure, deduplicated, transactional, and verifiable data storage"
homepage = "https://github.com/lostatc/acid-store"
repository = "https://github.com/lostatc/acid-store"
documentation = "https://docs.rs/acid-store"
readme = "README.md"
keywords = ["persistent", "storage", "data", "transactional"]
categories = ["filesystem", "encoding"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# File system
path-slash = { version = "0.1.1", optional = true }
walkdir = { version = "2.2.9", optional = true }
fs2 = "0.4.3"
dirs = "2.0.2"

# I/O
cdchunking = "1.0.0"

# SQL
rusqlite = { version = "0.21.0", features = ["bundled"], optional = true }

# Redis
redis = { version = "0.15.1", optional = true }

# Amazon S3
rust-s3 =  { version = "0.18.11", optional = true }

# Hashing
blake2 = "0.8.1"

# Error handling
thiserror = "1.0.9"
anyhow = "1.0.26"

# Compression
flate2 = "1.0.13"
xz2 = "0.1.6"
lz4 = "1.23.1"

# Encryption
sodiumoxide = "0.2.5"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
rand = { version = "0.7.2", features = ["small_rng"] }

# Serialization
serde = { version = "1.0.103", features = ["derive"] }
rmp = "0.8.8"
rmp-serde = "0.14.0"

# Misc
uuid = { version = "0.8.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
weak-table = "0.2.3"
bitflags = "1.2.1"

[dev-dependencies]
tempfile = "3.1.0"
serial_test = "0.3.2"
matches = "0.1.8"
dotenv = "0.15.0"

[features]
default = []

store-directory = ["walkdir"]

store-sqlite = ["rusqlite"]

store-redis = ["redis"]

store-s3 = ["rust-s3"]

repo-file = ["path-slash", "walkdir"]

repo-value = []

repo-version = []