[package]
name = "acid-store"
version = "0.8.0"
authors = ["Wren Powell <wrentpowell@gmail.com>"]
edition = "2018"
description = "A library for secure, deduplicated, transactional, and verifiable data storage"
homepage = "https://github.com/lostatc/acid-store"
repository = "https://github.com/lostatc/acid-store"
documentation = "https://docs.rs/acid-store"
readme = "README.md"
keywords = ["storage", "filesystem", "data", "transactional", "security"]
categories = ["filesystem", "encoding", "cryptography"]
license = "Apache-2.0"

# We use an attribute when building on docs.rs so we can make use of unstable rustdoc features.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# File system
relative-path = { version = "1.0.0", features = ["ci"] }
walkdir = "2.2.9"
filetime = { version = "0.2.8", optional = true }
tempfile = { version = "3.1.0", optional = true }

# FUSE
fuse = { version = "0.3.1", optional = true }
time = { version = "0.1.38", optional = true }

# I/O
cdchunking = "1.0.0"

# Async
tokio = { version = "0.2", features = ["rt-core"] }

# SQL
rusqlite = { version = "0.22.0", features = ["bundled"], optional = true }

# Redis
redis = { version = "0.17.0", optional = true }

# Amazon S3
rust-s3 = { version = "0.26.3", optional = true }

# Sftp
ssh2 = { version = "0.8.2", features = ["vendored-openssl"], optional = true }

# Hashing
digest = "0.9.0"
blake3 = "0.3.7"
blake2 = { version = "0.9.1", optional = true }
sha2 = { version = "0.9.2", optional = true }
sha3 = { version = "0.9.1", optional = true }

# Error handling
thiserror = "1.0.9"
anyhow = "1.0.26"

# Compression
lz4 = { version = "1.23.1", optional = true }

# Encryption
sodiumoxide = {version = "0.2.5", optional = true }
rand = { version = "0.7.2", optional = true }
secrecy = "0.7.0"

# Serialization
serde = { version = "1.0.103", features = ["derive", "rc"] }
rmp = "0.8.8"
rmp-serde = "0.14.0"

# Data structures
weak-table = "0.2.3"
bimap = { version = "0.6.1", optional = true }

# Misc
uuid = { version = "0.8.1", features = ["serde", "v4"] }
once_cell = "1.5.2"
hex-literal = "0.2.1"
bitflags = "1.2.1"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.17.0", optional = true }
xattr = { version = "0.2.2", optional = true }
users = { version = "0.11.0", optional = true }
exacl = { version = "0.6.0", optional = true }

[dev-dependencies]
rand = { version = "0.7.2", features = ["small_rng"] }
tempfile = "3.1.0"
serial_test = "0.4.0"
dotenv = "0.15.0"
criterion = "0.3.1"
bytesize = "1.0.0"
maplit = "1.0.2"
test-case = "1.0.0"

[features]
default = []

store-directory = []
store-sqlite = ["rusqlite"]
store-redis = ["redis"]
store-s3 = ["rust-s3"]
store-sftp = ["ssh2"]
store-rclone = ["store-sftp", "rand"]
file-metadata = ["nix", "filetime", "xattr", "users", "exacl"]
hash-algorithms = ["blake2", "sha2", "sha3"]
compression = ["lz4"]
encryption = ["sodiumoxide", "rand"]
fuse-mount = ["fuse", "bimap", "time", "tempfile", "file-metadata"]

[[bench]]
name = "io"
harness = false
